@@ -1,5 +1,6 @@
 3.3.0  - Added: The option to enable API validation of the pickup location in the cart.
        - Added: The ability to cancel a shipment before it has been shipped.
+       - Updated: The minimum required PrestaShop version is now 1.7.7.
 3.2.2  - Fixed: Tracking cron now doesn't skip orders statuses with a shipped flag.
 3.2.1  - Fixed: Correct bulk label printing error handling logic.
        - Fixed: Packet status now updates correctly for final states (delivered, canceled, returned, unknown) via cron.
